A suggestion for fixing styling with raw CSS

--- a/views/hello.erb
+++ b/views/hello.erb
@@ -1,1 +1,7 @@
 <h1>Hello There!<h1>
+
+<input type=button value="Press me!" />
+
+<a href="https://www.google.com" >
+  Click me to go to google!
+<a>
