--- a/views/inventory_table.erb
+++ b/views/inventory_table.erb
@@ -1,14 +1,9 @@
-<style type="text/css">
-  table, td {
-   border: 1px solid black;
-}
+<head>
+	<link href="<%= url('/css/style.css') %>" rel="stylesheet" type="text/css" />
+</head>
 
-  th {
-  letter-spacing: 2px;
-  align-content: flex-start;
-}
-</style>
-<body> 
+
+<body>
 <table>
 	<tr>
 		<th>1st row</th>
