--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,45 @@
 table {
    border: 1px solid black;
+   background: pink;
+   color: blue;
 }
 
 th {
   letter-spacing: 2px;
   align-content: flex-start;
+}
+
+
+.border1 {
+	margin: 10px 30px 10px;
+	border-style: solid;
+	border-width: 2px;
+
+}
+
+ul {
+	list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+  overflow: hidden;
+  background-color: blue;
+}
+
+li a {
+	display: inline;
+	color: white;
+  padding: 30px 40px;
+  text-decoration: none;
+}
+li a:hover {
+	background-color:cyan;
+	color: white;
+}
+
+li {
+	float: left;
+}
+
+.active {
+  background-color: pink;
 }
