--- a/views/hello.erb
+++ b/views/hello.erb
@@ -1,7 +1,17 @@
-<h1>Hello There!<h1>
-
-<input type=button value="Press me!" />
-
-<a href="https://www.google.com" >
-  Click me to go to google!
-<a>
+<head>
+	<link href="<%= url('/css/style.css') %>" rel="stylesheet" type="text/css" />
+</head>	
+<div class="border1">
+<ul>
+	<li class="active">
+	<a href="/">Home</a>
+	</li>
+	<li>
+	<a href="https://www.google.com" target=blank>
+		Sams Programming knowledge</a>
+	</li>
+	<li>
+	<a href="/inventory">Inventory</a>
+	</li>
+</ul>
+</div>
